--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Repository holding all Chainflip documentation",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -17,8 +18,8 @@
     "lucide-react": "^0.503.0",
     "framer-motion": "^12.0.0",
     "next": "^15.0.2",
-    "nextra": "4.3.0-alpha.22",
-    "nextra-theme-docs": "4.3.0-alpha.22",
+    "nextra": "4.3.0-alpha.30",
+    "nextra-theme-docs": "4.3.0-alpha.30",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "source-map-support": "^0.5.21"
