--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.544.0",
     "framer-motion": "^12.0.0",
     "next": "^15.0.2",
+    "next-themes": "^0.4.6",
     "nextra": "4.3.0-alpha.30",
     "nextra-theme-docs": "4.3.0-alpha.30",
     "react": "19.1.0",
